--- a/templates/encode.html
+++ b/templates/encode.html
@@ -26,7 +26,7 @@
         $(document).ready(function() {
             $("#encode_form").validate({
                 rules: {
-                    original_image: {
+                    original_file: {
                     required: true,
                   },
                   encoded_message: {
@@ -108,9 +108,9 @@
                                             <div class="row">
                                                 <div class="col-md-6 col-6">
 <div class="form-group">
-                                                <label for="customFile">Upload Image</label>
+                                                <label for="customFile">Upload File</label>
                                                 <div class="custom-file">
-                                                    <input type="file" name="{{form.original_image.name}}" class="custom-file-input" id="customFile" />
+                                                    <input type="file" name="{{form.original_file.name}}" class="custom-file-input" id="customFile" />
                                                     <label class="custom-file-label" for="customFile">Choose file</label>
                                                 </div>
                                             </div>
@@ -134,6 +134,8 @@
                                                     <option value="SS" {% if form.algorithm.value == "SS" %}selected{% endif %}>Spread Spectrum</option>
                                                     <option value="DFT" {% if form.algorithm.value == "DFT" %}selected{% endif %}>DFT</option>
                                                     <option value="DCT" {% if form.algorithm.value == "DCT" %}selected{% endif %}>DCT</option>
+                                                    <option value="VIDEO" {% if form.algorithm.value == "VIDEO" %}selected{% endif %}>VIDEO</option>
+                                                    <option value="AUDIO" {% if form.algorithm.value == "AUDIO" %}selected{% endif %}>AUDIO</option>
                                                 </select>
                                             </div>
                                         </div>
