--- a/templates/profile.html
+++ b/templates/profile.html
@@ -68,13 +68,18 @@
                                     <span class="font-weight-bold">General</span>
                                 </a>
                             </li>
-                            <!-- change password -->
+                            
+                            {% if user.is_third_party != True %}
+                                <!-- change password -->
                             <li class="nav-item">
                                 <a class="nav-link {% if formType == 'password' %}active{% endif %}" id="account-pill-password" data-toggle="pill" href="#account-vertical-password" aria-expanded="false">
                                     <i data-feather="lock" class="font-medium-3 mr-1"></i>
                                     <span class="font-weight-bold">Change Password</span>
                                 </a>
                             </li>
+                            {% endif %}
+                                
+                            
                         </ul>
                     </div>
                     <!--/ left menu section -->
