--- a/templates/decode.html
+++ b/templates/decode.html
@@ -148,7 +148,7 @@
                                             <button type="submit" class="btn btn-primary">Decode</button>
                                         </div>
                                     </div>
-                                </from>
+                                </form>
                             </div>
                         </div>
                     </div>
