--- a/templates/encode.html
+++ b/templates/encode.html
@@ -101,7 +101,10 @@
                                                     {% endfor %}
                                                     {% endfor %}
                                                     <div id="wait_quote" style="display: none;" class="alert alert-info alert-dismissible fade show cursor-pointer"  onclick="hideAlert(this)" role="alert">
-                                                        <div class="alert-body">Your request is being processed. Thanks for hanging in there with us! 🌐✨ #WaitingInStyle</div>
+                                                        <div class="alert-body">Your request is being processed. Thanks for hanging in there with us! 🌐✨ #WaitingInStyle
+                                                            <br>
+                                                            <blockquote>Note: estimated time to encode video is dependent on its size.</blockquote>
+                                                        </div>
                                                     </div>
                                         </div>
                                         <div class="col-md-12 col-12">
