--- a/templates/decode.html
+++ b/templates/decode.html
@@ -96,9 +96,11 @@
                                                     </div>
                                                 {% endfor %}
                                             {% endfor %}
-                                                    <div id="wait_quote" style="display: none;" class="alert alert-info alert-dismissible fade show cursor-pointer"  onclick="hideAlert(this)" role="alert">
-                                                        <div class="alert-body">Your request is being processed. Thanks for hanging in there with us! 🌐✨ #WaitingInStyle</div>
-                                                    </div>
+                                            <div id="wait_quote" style="display: none;" class="alert alert-info alert-dismissible fade show cursor-pointer"  onclick="hideAlert(this)" role="alert">
+                                                <div class="alert-body">Your request is being processed. Thanks for hanging in there with us! 🌐✨ #WaitingInStyle
+                                                                                                <em style="display: block;" class="font-weight-bold">Note: estimated time to encode video is dependent on its size.</em>
+                                                </div>
+                                            </div>
                                                 {% if messages %}
                                                     {% for msg in messages %}
                                                         <div class="alert alert-{{msg.tags}} alert-dismissible fade show"  onclick="hideAlert(this)" role="alert">
@@ -127,8 +129,6 @@
                                                             <option value="SS" {% if form.algorithm.value == "SS" %}selected{% endif %}>Spread Spectrum</option>
                                                             <option value="DFT" {% if form.algorithm.value == "DFT" %}selected{% endif %}>DFT</option>
                                                             <option value="DCT" {% if form.algorithm.value == "DCT" %}selected{% endif %}>DCT</option>
-                                                            <option value="VIDEO" {% if form.algorithm.value == "VIDEO" %}selected{% endif %}>VIDEO</option>
-                                                            <option value="AUDIO" {% if form.algorithm.value == "AUDIO" %}selected{% endif %}>AUDIO</option>
                                                         </select>
                                                     </div>
                                                 </div>
