Change the error message

--- a/templates/encode.html
+++ b/templates/encode.html
@@ -101,8 +101,9 @@
                                                     {% endfor %}
                                                     {% endfor %}
                                                     <div id="wait_quote" style="display: none;" class="alert alert-info alert-dismissible fade show cursor-pointer"  onclick="hideAlert(this)" role="alert">
-                                                        <div class="alert-body">Your request is being processed. Thanks for hanging in there with us! 🌐✨ #WaitingInStyle
-                                                                                                        <em style="display: block;" class="font-weight-bold">Note: estimated time to encode video is dependent on its size.</em>
+                                                        <div class="alert-body">
+                                                            Your request is being processed. Thanks for hanging in there with us! 🌐✨ #WaitingInStyle
+                                                            <em style="display: block;" class="font-weight-bold">Note: estimated time to encode file is dependent on its size.</em>
                                                         </div>
                                                     </div>
                                         </div>
