--- a/templates/forgotPassword.html
+++ b/templates/forgotPassword.html
@@ -1,73 +1,89 @@
-{% extends 'auth.html' %}
-
-{% block title %}
-    Forgot Password
-{% endblock title %}
-
+{% extends 'auth.html' %} {% block title %} Forgot Password {% endblock title %}
 {% block pageCss %}
-    <!-- BEGIN: Page CSS-->
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/core/menu/menu-types/vertical-menu.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/plugins/forms/form-validation.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/pages/page-auth.css">
-    <!-- END: Page CSS-->
-{% endblock pageCss %}
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="/static/app-assets/css/core/menu/menu-types/vertical-menu.css"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="/static/app-assets/css/plugins/forms/form-validation.css"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="/static/app-assets/css/pages/page-auth.css"
+/>
+{% endblock pageCss %} {% block pageJS %}
 
-{% block pageJS %}
-    
-    <!-- BEGIN: Page JS-->
-    <script src="/static/app-assets/js/scripts/pages/page-auth-forgot-password.js"></script>
-    <!-- END: Page JS-->
-{% endblock pageJS %}
-    
-{% block content %}
-    <!-- BEGIN: Content-->
-    <div class="app-content content ">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
-            </div>
-            <div class="content-body">
-                <div class="auth-wrapper auth-v1 px-2">
-                    <div class="auth-inner py-2">
-                        <!-- Forgot Password v1 -->
-                        <div class="card mb-0">
-                            <div class="card-body">
-                                <a href="javascript:void(0);" class="brand-logo">
-                                    <h2 class="brand-text text-primary ml-1">Steganography</h2>
-                                </a>
+<script src="/static/app-assets/js/scripts/pages/page-auth-forgot-password.js"></script>
+{% endblock pageJS %} {% block content %}
+<div class="app-content content">
+  <div class="content-overlay"></div>
+  <div class="header-navbar-shadow"></div>
+  <div class="content-wrapper">
+    <div class="content-header row"></div>
+    <div class="content-body">
+      <div class="auth-wrapper auth-v1 px-2">
+        <div class="auth-inner py-2">
+          <div class="card mb-0">
+            <div class="card-body">
+              <a href="javascript:void(0);" class="brand-logo">
+                <h2 class="brand-text text-primary ml-1">Steganography</h2>
+              </a>
 
-                                <h4 class="card-title mb-1">Forgot Password? 🔒</h4>
-                                <p class="card-text mb-2">Enter your email and we'll send you instructions to reset your password</p>
+              <h4 class="card-title mb-1">Forgot Password? 🔒</h4>
+              <p class="card-text mb-2">
+                Enter your email and we'll send you instructions to reset your
+                password
+              </p>
 
-                                <form class="auth-forgot-password-form mt-2" action="{% url 'auth.forgot' %}" method="POST">
-                                    {% csrf_token %}
-                                    {% for field, errors in form.errors.items %}
-                                                    {% for error in errors %}
-                                                    <div class="alert alert-danger alert-dismissible fade show cursor-pointer"  onclick="hideAlert(this)" role="alert">
-                                                        <div class="alert-body">{{ error }}</div>
-                                                    </div>
-                                                    {% endfor %}
-                                                    {% endfor %}
-                                    <div class="form-group">
-                                        <label for="forgot-password-email" class="form-label">Email</label>
-                                        <input type="text" class="form-control" id="forgot-password-email" name="email" placeholder="john@example.com" aria-describedby="forgot-password-email" tabindex="1" autofocus />
-                                    </div>
-                                    <button class="btn btn-primary btn-block" tabindex="2">Send reset link</button>
-                                </form>
-
-                                <p class="text-center mt-2">
-                                    <a href="{% url 'auth.login' %}"> <i data-feather="chevron-left"></i> Back to login </a>
-                                </p>
-                            </div>
-                        </div>
-                        <!-- /Forgot Password v1 -->
-                    </div>
+              <form
+                class="auth-forgot-password-form mt-2"
+                action="{% url 'auth.forgot' %}"
+                method="POST"
+              >
+                {% csrf_token %} {% for field, errors in form.errors.items %} {%
+                for error in errors %}
+                <div
+                  class="alert alert-danger alert-dismissible fade show cursor-pointer"
+                  onclick="hideAlert(this)"
+                  role="alert"
+                >
+                  <div class="alert-body">{{ error }}</div>
                 </div>
+                {% endfor %} {% endfor %}
+                <div class="form-group">
+                  <label for="forgot-password-email" class="form-label"
+                    >Email</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="forgot-password-email"
+                    name="email"
+                    placeholder="john@example.com"
+                    aria-describedby="forgot-password-email"
+                    tabindex="1"
+                    autofocus
+                  />
+                </div>
+                <button class="btn btn-primary btn-block" tabindex="2">
+                  Send reset link
+                </button>
+              </form>
 
+              <p class="text-center mt-2">
+                <a href="{% url 'auth.login' %}">
+                  <i data-feather="chevron-left"></i> Back to login
+                </a>
+              </p>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-    <!-- END: Content-->
+  </div>
+</div>
 {% endblock content %}
-    
