--- a/templates/auth.html
+++ b/templates/auth.html
@@ -1,102 +1,131 @@
 <!DOCTYPE html>
 {% load static %}
 <html class="loading" lang="en" data-textdirection="ltr">
-<!-- BEGIN: Head-->
+  <!-- BEGIN: Head-->
 
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>
-    {% block title %}
-        
-    {% endblock title %}
-         | Steganography</title>
-    <link rel="apple-touch-icon" href="/static/app-assets/images/ico/apple-icon-120.png">
-    <link rel="shortcut icon" type="image/x-icon" href="/static/app-assets/images/ico/favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500;1,600" rel="stylesheet">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui"
+    />
+    <title>{% block title %} {% endblock title %} | Steganography</title>
+    <link
+      rel="apple-touch-icon"
+      href="/static/app-assets/images/ico/apple-icon-120.png"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="/static/app-assets/images/ico/favicon.ico"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500;1,600"
+      rel="stylesheet"
+    />
 
-    <!-- BEGIN: Vendor CSS-->
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/vendors/css/vendors.min.css">
-    <!-- END: Vendor CSS-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/vendors/css/vendors.min.css"
+    />
 
-    <!-- BEGIN: Theme CSS-->
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/bootstrap-extended.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/colors.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/components.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/themes/dark-layout.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/themes/bordered-layout.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/themes/semi-dark-layout.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/bootstrap.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/bootstrap-extended.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/colors.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/components.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/themes/dark-layout.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/themes/bordered-layout.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/themes/semi-dark-layout.css"
+    />
 
-    <!-- BEGIN: Page CSS-->
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/core/menu/menu-types/vertical-menu.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/plugins/forms/form-validation.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/pages/page-auth.css">
-    <!-- END: Page CSS-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/core/menu/menu-types/vertical-menu.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/plugins/forms/form-validation.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/pages/page-auth.css"
+    />
 
-    
-    {% block pageCSS %}
-        
-    {% endblock pageCSS %}
-        
+    {% block pageCSS %} {% endblock pageCSS %}
 
-    <!-- BEGIN: Custom CSS-->
-    <link rel="stylesheet" type="text/css" href="/static/assets/css/style.css">
-    <!-- END: Custom CSS-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/assets/css/style.css"
+    />
 
     <script>
-        function hideAlert(e){
-            $(e).fadeOut();
-        }
+      function hideAlert(e) {
+        $(e).fadeOut();
+      }
     </script>
-</head>
-<!-- END: Head-->
+  </head>
 
-<!-- BEGIN: Body-->
+  <body
+    class="vertical-layout vertical-menu-modern blank-page navbar-floating footer-static"
+    data-open="click"
+    data-menu="vertical-menu-modern"
+    data-col="blank-page"
+  >
+    {% block content %} {% endblock content %}
 
-<body class="vertical-layout vertical-menu-modern blank-page navbar-floating footer-static  " data-open="click" data-menu="vertical-menu-modern" data-col="blank-page">
+    <script src="/static/app-assets/vendors/js/vendors.min.js"></script>
 
-    
-    {% block content %}
-        
-    {% endblock content %}
-        
+    <script src="/static/app-assets/vendors/js/forms/validation/jquery.validate.min.js"></script>
 
-<!-- BEGIN: Vendor JS-->
-<script src="/static/app-assets/vendors/js/vendors.min.js"></script>
-<!-- BEGIN Vendor JS-->
+    <script src="/static/app-assets/js/core/app-menu.js"></script>
+    <script src="/static/app-assets/js/core/app.js"></script>
 
-<!-- BEGIN: Page Vendor JS-->
-<script src="/static/app-assets/vendors/js/forms/validation/jquery.validate.min.js"></script>
-<!-- END: Page Vendor JS-->
+    {% block pageJS %} {% endblock pageJS %}
 
-<!-- BEGIN: Theme JS-->
-<script src="/static/app-assets/js/core/app-menu.js"></script>
-<script src="/static/app-assets/js/core/app.js"></script>
-<!-- END: Theme JS-->
+    <script src="/static/app-assets/js/scripts/pages/page-auth-login.js"></script>
 
-
-{% block pageJS %}
-    
-{% endblock pageJS %}
-    
-
-<!-- BEGIN: Page JS-->
-<script src="/static/app-assets/js/scripts/pages/page-auth-login.js"></script>
-<!-- END: Page JS-->
-
-<script>
-    $(window).on('load', function() {
+    <script>
+      $(window).on("load", function () {
         if (feather) {
-            feather.replace({
-                width: 14,
-                height: 14
-            });
+          feather.replace({
+            width: 14,
+            height: 14,
+          });
         }
-    })
-</script>
-</body>
-<!-- END: Body-->
-
+      });
+    </script>
+  </body>
 </html>
