--- a/templates/base.html
+++ b/templates/base.html
@@ -1,120 +1,151 @@
 <!DOCTYPE html>
 {% load static %}
 <html class="loading" lang="en" data-textdirection="ltr">
-<!-- BEGIN: Head-->
+  <!-- BEGIN: Head-->
 
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>
-    {% block title %}
-        
-    {% endblock title %}
-         | Steganography</title>
-    <link rel="apple-touch-icon" href="/static/app-assets/images/ico/apple-icon-120.png">
-    <link rel="shortcut icon" type="image/x-icon" href="/static/app-assets/images/ico/favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500;1,600" rel="stylesheet">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui"
+    />
+    <title>{% block title %} {% endblock title %} | Steganography</title>
+    <link
+      rel="apple-touch-icon"
+      href="/static/app-assets/images/ico/apple-icon-120.png"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="/static/app-assets/images/ico/favicon.ico"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500;1,600"
+      rel="stylesheet"
+    />
 
-    <!-- BEGIN: Vendor CSS-->
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/vendors/css/vendors.min.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/vendors/css/charts/apexcharts.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/vendors/css/extensions/toastr.min.css">
-    <!-- END: Vendor CSS-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/vendors/css/vendors.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/vendors/css/charts/apexcharts.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/vendors/css/extensions/toastr.min.css"
+    />
 
-    <!-- BEGIN: Theme CSS-->
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/bootstrap-extended.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/colors.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/components.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/themes/dark-layout.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/themes/bordered-layout.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/themes/semi-dark-layout.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/bootstrap.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/bootstrap-extended.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/colors.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/components.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/themes/dark-layout.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/themes/bordered-layout.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/themes/semi-dark-layout.css"
+    />
 
-    <!-- BEGIN: Page CSS-->
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/core/menu/menu-types/vertical-menu.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/pages/dashboard-ecommerce.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/plugins/charts/chart-apex.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/plugins/extensions/ext-component-toastr.css">
-    <!-- END: Page CSS-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/core/menu/menu-types/vertical-menu.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/pages/dashboard-ecommerce.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/plugins/charts/chart-apex.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/app-assets/css/plugins/extensions/ext-component-toastr.css"
+    />
 
-    
     <script>
-        function hideAlert(e){
-            $(e).fadeOut();
-        }
-        let encode_line_graph_data = []
-      let decode_line_graph_data = []
-      let coding_percentage_array = []
-      let all_years = []
-      let report_data = []
-      let currentYear = '9890'
+      function hideAlert(e) {
+        $(e).fadeOut();
+      }
+      let encode_line_graph_data = [];
+      let decode_line_graph_data = [];
+      let coding_percentage_array = [];
+      let all_years = [];
+      let report_data = [];
+      let currentYear = "9890";
     </script>
-    {% block pageCSS %}
-        
-    {% endblock pageCSS %}
-        
+    {% block pageCSS %} {% endblock pageCSS %}
 
-    <!-- BEGIN: Custom CSS-->
-    <link rel="stylesheet" type="text/css" href="/static/assets/css/style.css">
-    <!-- END: Custom CSS-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/static/assets/css/style.css"
+    />
+  </head>
 
-</head>
-<!-- END: Head-->
+  <body
+    class="vertical-layout vertical-menu-modern navbar-floating footer-static"
+    data-open="click"
+    data-menu="vertical-menu-modern"
+    data-col=""
+  >
+    {% include 'layouts/header.html' %} {% include 'layouts/sidebar.html' %} {%
+    block content %} {% endblock content %} {% include 'layouts/footer.html' %}
 
-<!-- BEGIN: Body-->
-
-<body class="vertical-layout vertical-menu-modern  navbar-floating footer-static  " data-open="click" data-menu="vertical-menu-modern" data-col="">
-
-    
-    
-{% include 'layouts/header.html' %}
-
-{% include 'layouts/sidebar.html' %}
-
-    
-    {% block content %}
-        
-    {% endblock content %}
-        
-
-
-
-    {% include 'layouts/footer.html' %}
-
-    <!-- BEGIN: Vendor JS-->
     <script src="/static/app-assets/vendors/js/vendors.min.js"></script>
-    <!-- BEGIN Vendor JS-->
 
-    <!-- BEGIN: Page Vendor JS-->
     <script src="/static/app-assets/vendors/js/charts/apexcharts.min.js"></script>
     <script src="/static/app-assets/vendors/js/extensions/toastr.min.js"></script>
-    <!-- END: Page Vendor JS-->
 
-    <!-- BEGIN: Theme JS-->
     <script src="/static/app-assets/js/core/app-menu.js"></script>
     <script src="/static/app-assets/js/core/app.js"></script>
-    <!-- END: Theme JS-->
 
-
-    
-    {% block pageJS %}
-        
-    {% endblock pageJS %}
-        
+    {% block pageJS %} {% endblock pageJS %}
 
     <script>
-        $(window).on('load', function() {
-            if (feather) {
-                feather.replace({
-                    width: 14,
-                    height: 14
-                });
-            }
-        })
+      $(window).on("load", function () {
+        if (feather) {
+          feather.replace({
+            width: 14,
+            height: 14,
+          });
+        }
+      });
     </script>
-</body>
-<!-- END: Body-->
-
+  </body>
 </html>
-        
