--- a/templates/index.html
+++ b/templates/index.html
@@ -28,21 +28,24 @@
         <div class="content">
           <h1>Welcome to Steganography tool</h1>
           <p>
-            This is the steganography tool base on the spread spectrum algorithm
+            Unveiling Secrets, Concealing Truths: Your Gateway to Secure
+            Communication.
           </p>
         </div>
       </section>
 
       <section class="right-section">
         <div class="background-image">
-          <img src="/static/assets/images/SpreadSpectrum.png" alt="Background Image" />
+          <img
+            src="/static/assets/images/SpreadSpectrum.png"
+            alt="Background Image"
+          />
           <div class="overlay"></div>
           <div class="login-button">
-            
             {% if user.is_authenticated %}
             <a href="{% url 'app.dashboard' %}">Dashboard</a>
             {% else %}
-              
+
             <a href="{% url 'auth.login' %}">Login</a>
             <a href="{% url 'auth.register' %}">Sign Up</a>
             {% endif %}
@@ -52,7 +55,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2024 steganography tool using spread spectrum</p>
+      <p>&copy; 2024 steganography tool using generic algorithm</p>
     </footer>
   </body>
 </html>
