--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -1,30 +1,67 @@
 {% load active_link_tags %}
 <!-- BEGIN: Main Menu-->
-<div class="main-menu menu-fixed menu-light menu-accordion menu-shadow" data-scroll-to-active="true">
-    <div class="navbar-header">
-        <ul class="nav navbar-nav flex-row">
-            <li class="nav-item mr-auto"><a class="navbar-brand" href="{% url 'app.dashboard' %}">
-                    <h2 class="brand-text">Steganography</h2>
-                </a></li>
-            <li class="nav-item nav-toggle"><a class="nav-link modern-nav-toggle pr-0" data-toggle="collapse"><i class="d-block d-xl-none text-primary toggle-icon font-medium-4" data-feather="x"></i><i class="d-none d-xl-block collapse-toggle-icon font-medium-4  text-primary" data-feather="disc" data-ticon="disc"></i></a></li>
-        </ul>
-    </div>
-    <div class="shadow-bottom"></div>
-    <div class="main-menu-content">
-        <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
-            <li class="nav-item {% active_link 'app.dashboard' 'active' %}">
-                <a class="d-flex align-items-center" href="{% url 'app.dashboard' %}"><i data-feather="home"></i><span class="menu-title text-truncate" data-i18n="Dashboards">Dashboards</span>
-                    </a>
-                
-            </li>
-            <li class=" navigation-header"><span data-i18n="Apps &amp; Pages">Tools</span><i data-feather="more-horizontal"></i>
-            </li>
-            <li class="nav-item {% active_link 'app.encode' 'active' %}"><a class="d-flex align-items-center" href="{% url 'app.encode' %}"><i data-feather="shield"></i><span class="menu-title text-truncate" data-i18n="Encode">Encode</span></a>
-            </li>
-            <li class=" nav-item {% active_link 'app.decode' 'active' %}"><a class="d-flex align-items-center" href="{% url 'app.decode' %}"><i data-feather="shield-off"></i><span class="menu-title text-truncate" data-i18n="Email">Decode</span></a>
-            </li>
-            
-        </ul>
-    </div>
+<div
+  class="main-menu menu-fixed menu-light menu-accordion menu-shadow"
+  data-scroll-to-active="true"
+>
+  <div class="navbar-header">
+    <ul class="nav navbar-nav flex-row">
+      <li class="nav-item mr-auto">
+        <a class="navbar-brand" href="{% url 'app.dashboard' %}">
+          <h2 class="brand-text">Steganography</h2>
+        </a>
+      </li>
+      <li class="nav-item nav-toggle">
+        <a class="nav-link modern-nav-toggle pr-0" data-toggle="collapse"
+          ><i
+            class="d-block d-xl-none text-primary toggle-icon font-medium-4"
+            data-feather="x"
+          ></i
+          ><i
+            class="d-none d-xl-block collapse-toggle-icon font-medium-4 text-primary"
+            data-feather="disc"
+            data-ticon="disc"
+          ></i
+        ></a>
+      </li>
+    </ul>
+  </div>
+  <div class="shadow-bottom"></div>
+  <div class="main-menu-content">
+    <ul
+      class="navigation navigation-main"
+      id="main-menu-navigation"
+      data-menu="menu-navigation"
+    >
+      <li class="nav-item {% active_link 'app.dashboard' 'active' %}">
+        <a class="d-flex align-items-center" href="{% url 'app.dashboard' %}"
+          ><i data-feather="home"></i
+          ><span class="menu-title text-truncate" data-i18n="Dashboards"
+            >Dashboard</span
+          >
+        </a>
+      </li>
+      <li class="navigation-header">
+        <span data-i18n="Apps &amp; Pages">Tools</span
+        ><i data-feather="more-horizontal"></i>
+      </li>
+      <li class="nav-item {% active_link 'app.encode' 'active' %}">
+        <a class="d-flex align-items-center" href="{% url 'app.encode' %}"
+          ><i data-feather="shield"></i
+          ><span class="menu-title text-truncate" data-i18n="Encode"
+            >Encode</span
+          ></a
+        >
+      </li>
+      <li class="nav-item {% active_link 'app.decode' 'active' %}">
+        <a class="d-flex align-items-center" href="{% url 'app.decode' %}"
+          ><i data-feather="shield-off"></i
+          ><span class="menu-title text-truncate" data-i18n="Email"
+            >Decode</span
+          ></a
+        >
+      </li>
+    </ul>
+  </div>
 </div>
 <!-- END: Main Menu-->
