--- a/templates/login.html
+++ b/templates/login.html
@@ -1,111 +1,156 @@
-{% extends 'auth.html' %}
+{% extends 'auth.html' %} {% block title %} Login {% endblock title %} {% block
+pageCSS %}
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="/static/app-assets/css/core/menu/menu-types/vertical-menu.css"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="/static/app-assets/css/plugins/forms/form-validation.css"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="/static/app-assets/css/pages/page-auth.css"
+/>
 
-{% block title %}
-    Login
-{% endblock title %}
+{% endblock pageCSS %} {% load socialaccount %} {% block content %}
+<div class="app-content content">
+  <div class="content-overlay"></div>
+  <div class="header-navbar-shadow"></div>
+  <div class="content-wrapper">
+    <div class="content-header row"></div>
+    <div class="content-body">
+      <div class="auth-wrapper auth-v1 px-2">
+        <div class="auth-inner py-2">
+          <div class="card mb-0">
+            <div class="card-body">
+              <a href="javascript:void(0);" class="brand-logo">
+                <h2 class="brand-text text-primary ml-1">Steganography</h2>
+              </a>
 
-{% block pageCSS %}
-    <!-- BEGIN: Page CSS-->
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/core/menu/menu-types/vertical-menu.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/plugins/forms/form-validation.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/pages/page-auth.css">
-    <!-- END: Page CSS-->
-{% endblock pageCSS %}
-    
-{% load socialaccount %}
+              <h4 class="card-title mb-1">Welcome to Steganography! 👋</h4>
+              <p class="card-text mb-2">
+                Please sign-in to your account and start the adventure
+              </p>
 
-{% block content %}
-        <!-- BEGIN: Content-->
-        <div class="app-content content ">
-            <div class="content-overlay"></div>
-            <div class="header-navbar-shadow"></div>
-            <div class="content-wrapper">
-                <div class="content-header row">
+              <form
+                class="auth-login-form mt-2"
+                action="{% url 'auth.login' %}"
+                method="POST"
+              >
+                {% for field, errors in form.errors.items %} {% for error in
+                errors %}
+                <div
+                  class="alert alert-danger"
+                  onclick="hideAlert(this)"
+                  role="alert"
+                >
+                  <div class="alert-body">{{ error }}</div>
                 </div>
-                <div class="content-body">
-                    <div class="auth-wrapper auth-v1 px-2">
-                        <div class="auth-inner py-2">
-                            <!-- Login v1 -->
-                            <div class="card mb-0">
-                                <div class="card-body">
-                                    <a href="javascript:void(0);" class="brand-logo">
-                                        
-                                        <h2 class="brand-text text-primary ml-1">Steganography</h2>
-                                    </a>
-    
-                                    <h4 class="card-title mb-1">Welcome to Steganography! 👋</h4>
-                                    <p class="card-text mb-2">Please sign-in to your account and start the adventure</p>
-    
-                                    <form class="auth-login-form mt-2" action="{% url 'auth.login' %}" method="POST">
-                                           
-                                    {% for field, errors in form.errors.items %}
-                                    {% for error in errors %}
-                                    <div class="alert alert-danger" onclick="hideAlert(this)" role="alert">
-                                        <div class="alert-body">{{ error }}</div>
-                                    </div>
-                                    {% endfor %}
-                                    {% endfor %}
-                                        
-                                        {% csrf_token %}
-                                        <div class="form-group">
-                                            <label for="login-email" class="form-label">Email</label>
-                                            <input type="text" class="form-control" id="login-email" name="username" value="{% firstof form.username.value form.username.value '' %}" placeholder="john@example.com" aria-describedby="login-email" tabindex="1" autofocus />
-                                        </div>
-    
-                                        <div class="form-group">
-                                            <div class="d-flex justify-content-between">
-                                                <label for="login-password">Password</label>
-                                                <a href="{% url 'auth.forgot' %}">
-                                                    <small>Forgot Password?</small>
-                                                </a>
-                                            </div>
-                                            <div class="input-group input-group-merge form-password-toggle">
-                                                <input type="password" class="form-control" id="login-password" name="password" tabindex="2" placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;" aria-describedby="login-password" />
-                                                <div class="input-group-append">
-                                                    <span class="input-group-text cursor-pointer"><i data-feather="eye"></i></span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="custom-control custom-checkbox">
-                                                <input class="custom-control-input" name="remember_me" type="checkbox" id="remember-me" tabindex="3" />
-                                                <label class="custom-control-label" for="remember-me"> Remember Me </label>
-                                            </div>
-                                        </div>
-                                        <button class="btn btn-primary btn-block" tabindex="4">Sign in</button>
-                                    </form>
-    
-                                    <p class="text-center mt-2">
-                                        <span>New on our platform?</span>
-                                        <a href="{% url 'auth.register' %}">
-                                            <span>Create an account</span>
-                                        </a>
-                                    </p>
-    
-                                    <div class="divider my-2">
-                                        <div class="divider-text">or</div>
-                                    </div>
-                                    <form action="{% provider_login_url 'google' %}?next=/dashboard" method="post">
-                                        {% csrf_token %}
-                                        <button type="submit" class="btn btn-dark w-100 font-weight-bold">
-                                            Sign In with Google <img src="/static/assets/images/google.ico" class="ml-1" width="32" height="32" >
-                                    </button>
-                                    </form>
-                                </div>
-                            </div>
-                            <!-- /Login v1 -->
-                        </div>
+                {% endfor %} {% endfor %} {% csrf_token %}
+                <div class="form-group">
+                  <label for="login-email" class="form-label">Email</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="login-email"
+                    name="username"
+                    value="{% firstof form.username.value form.username.value '' %}"
+                    placeholder="john@example.com"
+                    aria-describedby="login-email"
+                    tabindex="1"
+                    autofocus
+                  />
+                </div>
+
+                <div class="form-group">
+                  <div class="d-flex justify-content-between">
+                    <label for="login-password">Password</label>
+                    <a href="{% url 'auth.forgot' %}">
+                      <small>Forgot Password?</small>
+                    </a>
+                  </div>
+                  <div
+                    class="input-group input-group-merge form-password-toggle"
+                  >
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="login-password"
+                      name="password"
+                      tabindex="2"
+                      placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
+                      aria-describedby="login-password"
+                    />
+                    <div class="input-group-append">
+                      <span class="input-group-text cursor-pointer"
+                        ><i data-feather="eye"></i
+                      ></span>
                     </div>
-    
+                  </div>
                 </div>
+                <div class="form-group">
+                  <div class="custom-control custom-checkbox">
+                    <input
+                      class="custom-control-input"
+                      name="remember_me"
+                      type="checkbox"
+                      id="remember-me"
+                      tabindex="3"
+                    />
+                    <label class="custom-control-label" for="remember-me">
+                      Remember Me
+                    </label>
+                  </div>
+                </div>
+                <button class="btn btn-primary btn-block" tabindex="4">
+                  Sign in
+                </button>
+              </form>
+
+              <p class="text-center mt-2">
+                <span>New on our platform?</span>
+                <a href="{% url 'auth.register' %}">
+                  <span>Create an account</span>
+                </a>
+              </p>
+
+              <div class="divider my-2">
+                <div class="divider-text">or</div>
+              </div>
+              <form
+                action="{% provider_login_url 'google' %}?next=/dashboard"
+                method="post"
+              >
+                {% csrf_token %}
+                <button
+                  type="submit"
+                  class="btn btn-dark w-100 font-weight-bold"
+                >
+                  Sign In with Google
+                  <img
+                    src="/static/assets/images/google.ico"
+                    class="ml-1"
+                    width="32"
+                    height="32"
+                  />
+                </button>
+              </form>
             </div>
+          </div>
+          <!-- /Login v1 -->
         </div>
-        <!-- END: Content-->
-    
-{% endblock content %}
-    
-{% block pageJS %}
-    
+      </div>
+    </div>
+  </div>
+</div>
+<!-- END: Content-->
+
+{% endblock content %} {% block pageJS %}
+
 <!-- BEGIN: Page JS-->
 <script src="/static/app-assets/js/scripts/pages/page-auth-login.js"></script>
 <!-- END: Page JS-->
