--- a/templates/register.html
+++ b/templates/register.html
@@ -1,126 +1,198 @@
-{% extends 'auth.html' %}
-{% block title %}
-    Register
-{% endblock title %}
+{% extends 'auth.html' %} {% block title %} Register {% endblock title %} {%
+block pageCSS %}
 
-{% block pageCSS %}
-    
-    <!-- BEGIN: Page CSS-->
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/core/menu/menu-types/vertical-menu.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/plugins/forms/form-validation.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/pages/page-auth.css">
-    <!-- END: Page CSS-->
-{% endblock pageCSS %}
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="/static/app-assets/css/core/menu/menu-types/vertical-menu.css"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="/static/app-assets/css/plugins/forms/form-validation.css"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="/static/app-assets/css/pages/page-auth.css"
+/>
 
-    
-{% load socialaccount %}
+{% endblock pageCSS %} {% load socialaccount %} {% block content %}
+<div class="app-content content">
+  <div class="content-overlay"></div>
+  <div class="header-navbar-shadow"></div>
+  <div class="content-wrapper">
+    <div class="content-header row"></div>
+    <div class="content-body">
+      <div class="auth-wrapper auth-v1 px-2">
+        <div class="auth-inner py-2">
+          <div class="card mb-0">
+            <div class="card-body">
+              <a href="javascript:void(0);" class="brand-logo">
+                <h2 class="brand-text text-primary ml-1">Steganography</h2>
+              </a>
 
-{% block content %}
-    <!-- BEGIN: Content-->
-    <div class="app-content content ">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
-            </div>
-            <div class="content-body">
-                <div class="auth-wrapper auth-v1 px-2">
-                    <div class="auth-inner py-2">
-                        <!-- Register v1 -->
-                        <div class="card mb-0">
-                            <div class="card-body">
-                                <a href="javascript:void(0);" class="brand-logo">
-                                    <h2 class="brand-text text-primary ml-1">Steganography</h2>
-                                </a>
+              <h4 class="card-title mb-1">Adventure starts here 🚀</h4>
+              <p class="card-text mb-2">
+                Make your steganography easy and fun!
+              </p>
 
-                                <h4 class="card-title mb-1">Adventure starts here 🚀</h4>
-                                <p class="card-text mb-2">Make your app management easy and fun!</p>
-
-                                <form class="auth-register-form mt-2" action="{% url 'auth.register' %}" method="POST">
-                                        
-                                    {% for field, errors in form.errors.items %}
-                                        {% for error in errors %}
-                                        <div class="alert alert-danger" onclick="hideAlert(this)" role="alert">
-                                            <div class="alert-body">{{ error }}</div>
-                                        </div>
-                                        {% endfor %}
-                                    {% endfor %}
-                                        
-                                        
-                                    {% csrf_token %}
-                                    <div class="form-group">
-                                        <label for="register-full_name" class="form-label">{{ form.full_name.label }}</label>
-                                        <input type="text" class="form-control" id="register-full_name" value="{% firstof form.full_name.value form.full_name.value '' %}" name="{{ form.full_name.name }}" placeholder="johndoe" aria-describedby="register-full_name" tabindex="1" autofocus />
-                                        
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="register-email" class="form-label">{{ form.email.label }}</label>
-                                        <input type="text" class="form-control" id="register-email" value="{% firstof form.email.value form.email.value '' %}" name="{{ form.email.name }}" placeholder="john@example.com" aria-describedby="register-email" tabindex="2" />
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="register-password" class="form-label">{{ form.password1.label }}</label>
-
-                                        <div class="input-group input-group-merge form-password-toggle">
-                                            <input type="password" value="{% firstof form.password1.value form.password1.value '' %}" class="form-control form-control-merge" id="register-password" name="{{ form.password1.name }}" placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;" aria-describedby="register-password" tabindex="3" />
-                                            <div class="input-group-append">
-                                                <span class="input-group-text cursor-pointer"><i data-feather="eye"></i></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="register-confirm-password" class="form-label">{{ form.password2.label }}</label>
-
-                                        <div class="input-group input-group-merge form-password-toggle">
-                                            <input type="password" value="{% firstof form.password2.value form.password2.value '' %}" class="form-control form-control-merge" id="register-confirm-password" name="{{ form.password2.name }}" placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;" aria-describedby="register-confirm-password" tabindex="3" />
-                                            <div class="input-group-append">
-                                                <span class="input-group-text cursor-pointer"><i data-feather="eye"></i></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="custom-control custom-checkbox">
-                                            <input class="custom-control-input" type="checkbox" name="privacy_policy" id="register-privacy-policy" tabindex="4" />
-                                            <label class="custom-control-label" for="register-privacy-policy">
-                                                I agree to <a href="javascript:void(0);">privacy policy & terms</a>
-                                            </label>
-                                        </div>
-                                    </div>
-                                    <button class="btn btn-primary btn-block" tabindex="5">Sign up</button>
-                                </form>
-
-                                <p class="text-center mt-2">
-                                    <span>Already have an account?</span>
-                                    <a href="{% url 'auth.login' %}">
-                                        <span>Sign in instead</span>
-                                    </a>
-                                </p>
-
-                                <div class="divider my-2">
-                                    <div class="divider-text">or</div>
-                                </div>
-
-                                <form action="{% provider_login_url 'google' %}?next=/dashboard" method="post">
-                                    {% csrf_token %}
-                                    <button type="submit" class="btn btn-dark w-100 font-weight-bold">
-                                        Sign In with Google <img src="/static/assets/images/google.ico" class="ml-1" width="32" height="32" >
-                                </button>
-                                </form>
-                            </div>
-                        </div>
-                        <!-- /Register v1 -->
-                    </div>
+              <form
+                class="auth-register-form mt-2"
+                action="{% url 'auth.register' %}"
+                method="POST"
+              >
+                {% for field, errors in form.errors.items %} {% for error in
+                errors %}
+                <div
+                  class="alert alert-danger"
+                  onclick="hideAlert(this)"
+                  role="alert"
+                >
+                  <div class="alert-body">{{ error }}</div>
+                </div>
+                {% endfor %} {% endfor %} {% csrf_token %}
+                <div class="form-group">
+                  <label for="register-full_name" class="form-label"
+                    >{{ form.full_name.label }}</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="register-full_name"
+                    value="{% firstof form.full_name.value form.full_name.value '' %}"
+                    name="{{ form.full_name.name }}"
+                    placeholder="johndoe"
+                    aria-describedby="register-full_name"
+                    tabindex="1"
+                    autofocus
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="register-email" class="form-label"
+                    >{{ form.email.label }}</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="register-email"
+                    value="{% firstof form.email.value form.email.value '' %}"
+                    name="{{ form.email.name }}"
+                    placeholder="john@example.com"
+                    aria-describedby="register-email"
+                    tabindex="2"
+                  />
                 </div>
 
+                <div class="form-group">
+                  <label for="register-password" class="form-label"
+                    >{{ form.password1.label }}</label
+                  >
+
+                  <div
+                    class="input-group input-group-merge form-password-toggle"
+                  >
+                    <input
+                      type="password"
+                      value="{% firstof form.password1.value form.password1.value '' %}"
+                      class="form-control form-control-merge"
+                      id="register-password"
+                      name="{{ form.password1.name }}"
+                      placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
+                      aria-describedby="register-password"
+                      tabindex="3"
+                    />
+                    <div class="input-group-append">
+                      <span class="input-group-text cursor-pointer"
+                        ><i data-feather="eye"></i
+                      ></span>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="register-confirm-password" class="form-label"
+                    >{{ form.password2.label }}</label
+                  >
+
+                  <div
+                    class="input-group input-group-merge form-password-toggle"
+                  >
+                    <input
+                      type="password"
+                      value="{% firstof form.password2.value form.password2.value '' %}"
+                      class="form-control form-control-merge"
+                      id="register-confirm-password"
+                      name="{{ form.password2.name }}"
+                      placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
+                      aria-describedby="register-confirm-password"
+                      tabindex="3"
+                    />
+                    <div class="input-group-append">
+                      <span class="input-group-text cursor-pointer"
+                        ><i data-feather="eye"></i
+                      ></span>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="custom-control custom-checkbox">
+                    <input
+                      class="custom-control-input"
+                      type="checkbox"
+                      name="privacy_policy"
+                      id="register-privacy-policy"
+                      tabindex="4"
+                    />
+                    <label
+                      class="custom-control-label"
+                      for="register-privacy-policy"
+                    >
+                      I agree to privacy policy & terms
+                    </label>
+                  </div>
+                </div>
+                <button class="btn btn-primary btn-block" tabindex="5">
+                  Sign up
+                </button>
+              </form>
+
+              <p class="text-center mt-2">
+                <span>Already have an account?</span>
+                <a href="{% url 'auth.login' %}">
+                  <span>Sign in instead</span>
+                </a>
+              </p>
+
+              <div class="divider my-2">
+                <div class="divider-text">or</div>
+              </div>
+
+              <form
+                action="{% provider_login_url 'google' %}?next=/dashboard"
+                method="post"
+              >
+                {% csrf_token %}
+                <button
+                  type="submit"
+                  class="btn btn-dark w-100 font-weight-bold"
+                >
+                  Sign In with Google
+                  <img
+                    src="/static/assets/images/google.ico"
+                    class="ml-1"
+                    width="32"
+                    height="32"
+                  />
+                </button>
+              </form>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-    <!-- END: Content-->
-{% endblock content %}
-    
-{% block pageJS %}
-    
-<!-- BEGIN: Page JS-->
+  </div>
+</div>
+{% endblock content %} {% block pageJS %}
+
 <script src="/static/app-assets/js/scripts/pages/page-auth-register.js"></script>
-<!-- END: Page JS-->
 {% endblock pageJS %}
