--- a/templates/resetPassword.html
+++ b/templates/resetPassword.html
@@ -1,92 +1,122 @@
-{% extends 'auth.html' %}
+{% extends 'auth.html' %} {% block pageJS %}
 
-{% block pageJS %}
-    
-    <!-- BEGIN: Page JS-->
-    <script src="/static/app-assets/js/scripts/pages/page-auth-reset-password.js"></script>
-    <!-- END: Page JS-->
-{% endblock pageJS %}
+<script src="/static/app-assets/js/scripts/pages/page-auth-reset-password.js"></script>
+{% endblock pageJS %} {% block pageCSS %}
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="/static/app-assets/css/core/menu/menu-types/vertical-menu.css"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="/static/app-assets/css/plugins/forms/form-validation.css"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="/static/app-assets/css/pages/page-auth.css"
+/>
 
-{% block pageCSS %}
-    <!-- BEGIN: Page CSS-->
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/core/menu/menu-types/vertical-menu.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/plugins/forms/form-validation.css">
-    <link rel="stylesheet" type="text/css" href="/static/app-assets/css/pages/page-auth.css">
-    <!-- END: Page CSS-->
-{% endblock pageCSS %}
-    
+{% endblock pageCSS %} {% block title %} Reset Password {% endblock title %} {%
+block content %}
+<div class="app-content content">
+  <div class="content-overlay"></div>
+  <div class="header-navbar-shadow"></div>
+  <div class="content-wrapper">
+    <div class="content-header row"></div>
+    <div class="content-body">
+      <div class="auth-wrapper auth-v1 px-2">
+        <div class="auth-inner py-2">
+          <div class="card mb-0">
+            <div class="card-body">
+              <a href="javascript:void(0);" class="brand-logo">
+                <h2 class="brand-text text-primary ml-1">Steganography</h2>
+              </a>
 
-{% block title %}
-    Reset Password
-{% endblock title %}
+              <h4 class="card-title mb-1">Reset Password 🔒</h4>
+              <p class="card-text mb-2">
+                Your new password must be different from previously used
+                passwords
+              </p>
 
-{% block content %}
-    <!-- BEGIN: Content-->
-    <div class="app-content content ">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
-            </div>
-            <div class="content-body">
-                <div class="auth-wrapper auth-v1 px-2">
-                    <div class="auth-inner py-2">
-                        <!-- Reset Password v1 -->
-                        <div class="card mb-0">
-                            <div class="card-body">
-                                <a href="javascript:void(0);" class="brand-logo">
-                                    <h2 class="brand-text text-primary ml-1">Steganography</h2>
-                                </a>
-
-                                <h4 class="card-title mb-1">Reset Password 🔒</h4>
-                                <p class="card-text mb-2">Your new password must be different from previously used passwords</p>
-
-                                <form class="auth-reset-password-form mt-2" action="" method="POST">
-                                    {% csrf_token %}
-                                    {% for field, errors in form.errors.items %}
-                                                    {% for error in errors %}
-                                                    <div class="alert alert-danger alert-dismissible fade show cursor-pointer"  onclick="hideAlert(this)" role="alert">
-                                                        <div class="alert-body">{{ error }}</div>
-                                                    </div>
-                                                    {% endfor %}
-                                                    {% endfor %}
-                                    <div class="form-group">
-                                        <div class="d-flex justify-content-between">
-                                            <label for="reset-password-new">New Password</label>
-                                        </div>
-                                        <div class="input-group input-group-merge form-password-toggle">
-                                            <input type="password" class="form-control form-control-merge" id="reset-password-new" name="new_password1" placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;" aria-describedby="reset-password-new" tabindex="1" autofocus />
-                                            <div class="input-group-append">
-                                                <span class="input-group-text cursor-pointer"><i data-feather="eye"></i></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="d-flex justify-content-between">
-                                            <label for="reset-password-confirm">Confirm Password</label>
-                                        </div>
-                                        <div class="input-group input-group-merge form-password-toggle">
-                                            <input type="password" class="form-control form-control-merge" id="reset-password-confirm" name="new_password2" placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;" aria-describedby="reset-password-confirm" tabindex="2" />
-                                            <div class="input-group-append">
-                                                <span class="input-group-text cursor-pointer"><i data-feather="eye"></i></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <button class="btn btn-primary btn-block" tabindex="3">Set New Password</button>
-                                </form>
-
-                                <p class="text-center mt-2">
-                                    <a href="{% url 'auth.login' %}"> <i data-feather="chevron-left"></i> Back to login </a>
-                                </p>
-                            </div>
-                        </div>
-                        <!-- /Reset Password v1 -->
-                    </div>
+              <form
+                class="auth-reset-password-form mt-2"
+                action=""
+                method="POST"
+              >
+                {% csrf_token %} {% for field, errors in form.errors.items %} {%
+                for error in errors %}
+                <div
+                  class="alert alert-danger alert-dismissible fade show cursor-pointer"
+                  onclick="hideAlert(this)"
+                  role="alert"
+                >
+                  <div class="alert-body">{{ error }}</div>
                 </div>
+                {% endfor %} {% endfor %}
+                <div class="form-group">
+                  <div class="d-flex justify-content-between">
+                    <label for="reset-password-new">New Password</label>
+                  </div>
+                  <div
+                    class="input-group input-group-merge form-password-toggle"
+                  >
+                    <input
+                      type="password"
+                      class="form-control form-control-merge"
+                      id="reset-password-new"
+                      name="new_password1"
+                      placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
+                      aria-describedby="reset-password-new"
+                      tabindex="1"
+                      autofocus
+                    />
+                    <div class="input-group-append">
+                      <span class="input-group-text cursor-pointer"
+                        ><i data-feather="eye"></i
+                      ></span>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="d-flex justify-content-between">
+                    <label for="reset-password-confirm">Confirm Password</label>
+                  </div>
+                  <div
+                    class="input-group input-group-merge form-password-toggle"
+                  >
+                    <input
+                      type="password"
+                      class="form-control form-control-merge"
+                      id="reset-password-confirm"
+                      name="new_password2"
+                      placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
+                      aria-describedby="reset-password-confirm"
+                      tabindex="2"
+                    />
+                    <div class="input-group-append">
+                      <span class="input-group-text cursor-pointer"
+                        ><i data-feather="eye"></i
+                      ></span>
+                    </div>
+                  </div>
+                </div>
+                <button class="btn btn-primary btn-block" tabindex="3">
+                  Set New Password
+                </button>
+              </form>
 
+              <p class="text-center mt-2">
+                <a href="{% url 'auth.login' %}">
+                  <i data-feather="chevron-left"></i> Back to login
+                </a>
+              </p>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-    <!-- END: Content-->
+  </div>
+</div>
 {% endblock content %}
-    
