--- a/templates/forgotPassword.html
+++ b/templates/forgotPassword.html
@@ -1,5 +1,6 @@
 {% extends 'auth.html' %} {% block title %} Forgot Password {% endblock title %}
 {% block pageCss %}
+<!-- BEGIN: Page CSS-->
 <link
   rel="stylesheet"
   type="text/css"
@@ -15,10 +16,14 @@
   type="text/css"
   href="/static/app-assets/css/pages/page-auth.css"
 />
+<!-- END: Page CSS-->
 {% endblock pageCss %} {% block pageJS %}
 
+<!-- BEGIN: Page JS-->
 <script src="/static/app-assets/js/scripts/pages/page-auth-forgot-password.js"></script>
+<!-- END: Page JS-->
 {% endblock pageJS %} {% block content %}
+<!-- BEGIN: Content-->
 <div class="app-content content">
   <div class="content-overlay"></div>
   <div class="header-navbar-shadow"></div>
@@ -27,6 +32,7 @@
     <div class="content-body">
       <div class="auth-wrapper auth-v1 px-2">
         <div class="auth-inner py-2">
+          <!-- Forgot Password v1 -->
           <div class="card mb-0">
             <div class="card-body">
               <a href="javascript:void(0);" class="brand-logo">
@@ -81,9 +87,11 @@
               </p>
             </div>
           </div>
+          <!-- /Forgot Password v1 -->
         </div>
       </div>
     </div>
   </div>
 </div>
+<!-- END: Content-->
 {% endblock content %}
