Change to check

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -82,7 +82,7 @@
             <div class="card card-congratulation-medal">
               <div class="card-body">
                 <h5>Congratulations 🎉 {{ user.full_name }}!</h5>
-                <p class="card-text font-small-3">You have made a great start in coding!</p>
+                <p class="card-text font-small-3">You have made a great start in tool!</p>
                 <h3 class="mb-75 mt-1 pt-50">
                   <a href="javascript:void(0);" id="total_coding"></a> Files Coded
                 </h3>
