--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
         <div class="content">
           <h1>Welcome to Steganography tool</h1>
           <p>
-            This is the steganography tool base on the spread spectrum algorithm
+            Hide. Encrypt. Share. Stego, Your Secret Keeper.
           </p>
         </div>
       </section>
@@ -52,7 +52,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2024 steganography tool using spread spectrum</p>
+      <p>&copy; 2024 Generics Steganography Algorithms</p>
     </footer>
   </body>
 </html>
