--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -13,7 +13,7 @@
     <div class="main-menu-content">
         <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
             <li class="nav-item {% active_link 'app.dashboard' 'active' %}">
-                <a class="d-flex align-items-center" href="{% url 'app.dashboard' %}"><i data-feather="home"></i><span class="menu-title text-truncate" data-i18n="Dashboards">Dashboards</span>
+                <a class="d-flex align-items-center" href="{% url 'app.dashboard' %}"><i data-feather="home"></i><span class="menu-title text-truncate" data-i18n="Dashboards">Dashboard</span>
                     </a>
                 
             </li>
