--- a/templates/register.html
+++ b/templates/register.html
@@ -34,7 +34,7 @@
                                 </a>
 
                                 <h4 class="card-title mb-1">Adventure starts here 🚀</h4>
-                                <p class="card-text mb-2">Make your app management easy and fun!</p>
+                                <p class="card-text mb-2">Make your Steganography easy and fun!</p>
 
                                 <form class="auth-register-form mt-2" action="{% url 'auth.register' %}" method="POST">
                                         
@@ -82,7 +82,7 @@
                                         <div class="custom-control custom-checkbox">
                                             <input class="custom-control-input" type="checkbox" name="privacy_policy" id="register-privacy-policy" tabindex="4" />
                                             <label class="custom-control-label" for="register-privacy-policy">
-                                                I agree to <a href="javascript:void(0);">privacy policy & terms</a>
+                                                I agree to privacy policy & terms
                                             </label>
                                         </div>
                                     </div>
